--- a/ss31/k7/ss31_k7.css
+++ b/ss31/k7/ss31_k7.css
@@ -3,12 +3,10 @@ body {
     min-width: 250px;
 }
 
-/* Include the padding and border in an element's total width and height */
 * {
     box-sizing: border-box;
 }
 
-/* Remove margins and padding from the list */
 ul {
     margin: 0;
     padding: 0;
@@ -23,6 +21,10 @@ ul li {
     background: #eee;
     font-size: 18px;
     transition: 0.2s;
+
+    display: flex;
+    justify-content: space-between;
+
 
     /* make the list items unselectable */
     -webkit-user-select: none;
@@ -42,11 +44,11 @@ ul li:hover {
 }
 
 /* When clicked on, add a background color and strike out text */
-ul li.checked {
+/* ul li.checked {
     background: #888;
     color: #fff;
     text-decoration: line-through;
-}
+} */
 
 /* Add a "checked" mark when clicked on */
 ul li.checked::before {
@@ -118,3 +120,25 @@ input {
 .addBtn:hover {
     background-color: #bbb;
 }
+
+.btn-del{
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
