--- a/ss31/k7/ss31_k7.css
+++ b/ss31/k7/ss31_k7.css
@@ -44,11 +44,11 @@ ul li:hover {
 }
 
 /* When clicked on, add a background color and strike out text */
-/* ul li.checked {
+ul li.checked {
     background: #888;
     color: #fff;
     text-decoration: line-through;
-} */
+}
 
 /* Add a "checked" mark when clicked on */
 ul li.checked::before {
@@ -120,29 +120,5 @@ input {
 .addBtn:hover {
     background-color: #bbb;
 }
-
-.btn-del{
-    background-color: red;
-    padding: 3px 10px;
-}
-.btn-del:hover{
-    opacity: 0.6;
-    cursor: pointer;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
